added bottom header

--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -1,22 +1,59 @@
-.header-top{
-    background-color: $main_color;
+header{
     ul{
         margin: 0;
         padding: 0;
         list-style-type: none;
-        text-align: right;
         li{
             display: inline-block;
-            &:last-child{
-                padding-left: 60px;
-            }
-            a{
-                color: #fff;
-                font-size: 12px;
-                display: inline-block;
-                font-weight: 600;
-                padding: 5px;
+
+        }
+    }
+    .header-top{
+        background-color: $main_color;
+        ul{
+            text-align: right;
+            li{
+
+                &:last-child{
+                    padding-left: 60px;
+                }
+                a{
+                    color: $light_color;
+                    padding: 5px;
+                    font-size: 12px;
+                    display: inline-block;
+                    font-weight: 600;
+                }
             }
         }
+    }
+    .header-bottom{
+        background-color: $light_color;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+
+        .nav-menu{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            li{
+                a{
+                    font-weight: 600;
+                    color: $dark_color;
+                    display: inline-block;
+                    line-height: 113px;
+                    margin: 0 20px;
+
+
+                    &.active, &:hover{
+                        color: $main_color;
+                        border-bottom: 4px solid $main_color;
+                    }
+                }
+            }
+
+
+        }
+
     }
 }
