--- a/public/css/app.css
+++ b/public/css/app.css
@@ -389,7 +389,8 @@ h3,
 h4,
 h4,
 h5,
-h6 {
+h6,
+a {
   font-family: "Open Sans Condensed", sans-serif;
 }
 
@@ -412,30 +413,58 @@ a {
   text-transform: uppercase;
 }
 
-.header-top {
-  background-color: #0182f9;
-}
-
-.header-top ul {
+header ul {
   margin: 0;
   padding: 0;
   list-style-type: none;
+}
+
+header ul li {
+  display: inline-block;
+}
+
+header .header-top {
+  background-color: #0182f9;
+}
+
+header .header-top ul {
   text-align: right;
 }
 
-.header-top ul li {
-  display: inline-block;
-}
-
-.header-top ul li:last-child {
+header .header-top ul li:last-child {
   padding-left: 60px;
 }
 
-.header-top ul li a {
+header .header-top ul li a {
   color: #fff;
+  padding: 5px;
   font-size: 12px;
   display: inline-block;
   font-weight: 600;
-  padding: 5px;
+}
+
+header .header-bottom {
+  background-color: #fff;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+header .header-bottom .nav-menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header .header-bottom .nav-menu li a {
+  font-weight: 600;
+  color: #464646;
+  display: inline-block;
+  line-height: 113px;
+  margin: 0 20px;
+}
+
+header .header-bottom .nav-menu li a.active,
+header .header-bottom .nav-menu li a:hover {
+  color: #0182f9;
+  border-bottom: 4px solid #0182f9;
 }
 
