--- a/resources/sass/partials/_common.scss
+++ b/resources/sass/partials/_common.scss
@@ -2,7 +2,7 @@ body{
     font-family: 'Open Sans', sans-serif;
 }
 
-h1, h2, h3, h4, h4, h5, h6 {
+h1, h2, h3, h4, h4, h5, h6, a {
     font-family: 'Open Sans Condensed', sans-serif;
 }
 .container{
