added card series section

--- a/resources/sass/partials/_common.scss
+++ b/resources/sass/partials/_common.scss
@@ -23,3 +23,8 @@ a{
 .uppercase{
     text-transform: uppercase;
 }
+
+.jumbotron{
+    background-image: url('/images/jumbotron.jpg');
+    padding: 200px 0;
+}
