--- a/public/css/app.css
+++ b/public/css/app.css
@@ -413,6 +413,11 @@ a {
   text-transform: uppercase;
 }
 
+.jumbotron {
+  background-image: url("/images/jumbotron.jpg");
+  padding: 200px 0;
+}
+
 header ul {
   margin: 0;
   padding: 0;
@@ -456,7 +461,7 @@ header .header-bottom .nav-menu {
 
 header .header-bottom .nav-menu li a {
   font-weight: 600;
-  color: #464646;
+  color: #1c1c1c;
   display: inline-block;
   line-height: 113px;
   margin: 0 20px;
@@ -466,5 +471,52 @@ header .header-bottom .nav-menu li a.active,
 header .header-bottom .nav-menu li a:hover {
   color: #0182f9;
   border-bottom: 4px solid #0182f9;
+}
+
+.section-series {
+  background-color: #1c1c1c;
+}
+
+.section-series h2 {
+  display: inline-block;
+  padding: 12px 20px;
+  font-size: 28px;
+  transform: translateY(-50%);
+  color: #fff;
+  background-color: #0182f9;
+  margin: 0;
+}
+
+.section-series .cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.section-series .cards .card {
+  flex-basis: 185px;
+}
+
+.section-series .cards .card .serie-img {
+  width: 185px;
+}
+
+.section-series .cards .card .serie-img img {
+  max-width: 100%;
+}
+
+.section-series .cards .card h3 {
+  margin: 10px 0 40px 0;
+  color: #fff;
+}
+
+.section-series .more-button {
+  text-align: center;
+}
+
+.section-series .more-button a {
+  background-color: #0182f9;
+  color: #fff;
+  padding: 10px 80px;
 }
 
