--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,4 +2,5 @@
 @import 'partials/variables';
 @import 'partials/common';
 @import 'partials/header';
+@import 'partials/section';
 @import 'partials/footer';
