added search-bar header

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
@@ -472,6 +474,30 @@ header .header-bottom .nav-menu li a.active,
 header .header-bottom .nav-menu li a:hover {
   color: #0182f9;
   border-bottom: 4px solid #0182f9;
+}
+
+header .header-bottom .nav-menu .search-bar {
+  width: 10%;
+  border-bottom: 2px solid #0182f9;
+  display: flex;
+  justify-content: flex-end;
+}
+
+header .header-bottom .nav-menu .search-bar input {
+  text-align: right;
+  color: #1c1c1c;
+  font-weight: bold;
+  width: 70%;
+  border: none;
+  outline: none;
+  padding-right: 6px;
+}
+
+header .header-bottom .nav-menu .search-bar .icon::after {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  content: "\F002";
+  color: #1c1c1c;
 }
 
 .section-series {
