--- a/public/css/app.css
+++ b/public/css/app.css
@@ -408,6 +408,17 @@ span {
   display: table;
 }
 
+.container-sx {
+  max-width: 1080px;
+  margin: auto;
+}
+
+.container-sx::after {
+  clear: both;
+  content: "";
+  display: table;
+}
+
 a {
   text-decoration: none;
 }
@@ -581,6 +592,58 @@ header .header-bottom .nav-menu .search-bar .icon::after {
 .section-action .action-container .action-box .action-img img,
 .section-action .action-container .action-box .action-img svg {
   width: 100%;
+}
+
+#single-comic {
+  background-color: #0182f9;
+  padding-top: 40px;
+}
+
+#single-comic .thumb-img {
+  position: relative;
+}
+
+#single-comic .thumb-img .img-comics-box {
+  position: absolute;
+  transform: translateY(-100%);
+}
+
+#single-comic .thumb-img .img-comics-box .img-comics-content {
+  position: relative;
+  border: 1px solid #fff;
+}
+
+#single-comic .thumb-img .img-comics-box .img-comics-content .label {
+  position: absolute;
+  background-color: #4da9fe;
+  color: #fff;
+  padding: 4px;
+}
+
+#single-comic .thumb-img .img-comics-box .img-comics-content .label.view-gallery {
+  text-align: center;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+#single-comic .details-comic {
+  background-color: #fff;
+}
+
+#single-comic .details-comic .shop-comic {
+  padding: 40px 0;
+  display: flex;
+}
+
+#single-comic .details-comic .shop-comic .info-shop {
+  width: calc(70% - 30px);
+  margin-right: 30px;
+}
+
+#single-comic .details-comic .shop-comic .adv {
+  width: 30%;
+  text-align: right;
 }
 
 footer {
