--- a/resources/sass/partials/_common.scss
+++ b/resources/sass/partials/_common.scss
@@ -15,6 +15,16 @@ h1, h2, h3, h4, h4, h5, h6, a, span {
     content: '';
     display: table;
 }
+.container-sx{
+    max-width: 1080px;
+    margin: auto;
+}
+
+.container-sx::after{
+    clear: both;
+    content: '';
+    display: table;
+}
 
 a{
     text-decoration: none;
