--- a/resources/sass/partials/_section.scss
+++ b/resources/sass/partials/_section.scss
@@ -67,3 +67,47 @@
         }
     }
 }
+
+#single-comic{
+    background-color: $main_color;
+    padding-top: 40px;
+    .thumb-img{
+        position: relative;
+        .img-comics-box{
+            position: absolute;
+            transform: translateY(-100%);
+            .img-comics-content{
+                position: relative;
+                border: 1px solid $light_color;
+                .label{
+                    position: absolute;
+                    background-color: lighten($main_color, 16%);
+                    color: $light_color;
+                    padding: 4px;
+                    &.view-gallery{
+                        text-align: center;
+                        bottom: 0;
+                        left: 0;
+                        right: 0;
+                    }
+                }
+            }
+        }
+    }
+    .details-comic{
+        background-color: $light_color;
+        .shop-comic{
+            padding: 40px 0;
+            display: flex;
+            .info-shop{
+                width: calc(70% - 30px);
+                margin-right: 30px;
+            }
+            .adv{
+                width: 30%;
+                text-align: right;
+            }
+        }
+
+    }
+}
