--- a/public/css/app.css
+++ b/public/css/app.css
@@ -409,7 +409,7 @@ span {
 }
 
 .container-sx {
-  max-width: 1080px;
+  max-width: 920px;
   margin: auto;
 }
 
@@ -596,7 +596,7 @@ header .header-bottom .nav-menu .search-bar .icon::after {
 
 #single-comic {
   background-color: #0182f9;
-  padding-top: 40px;
+  padding-top: 60px;
 }
 
 #single-comic .thumb-img {
@@ -605,7 +605,7 @@ header .header-bottom .nav-menu .search-bar .icon::after {
 
 #single-comic .thumb-img .img-comics-box {
   position: absolute;
-  transform: translateY(-100%);
+  transform: translateY(-107%);
 }
 
 #single-comic .thumb-img .img-comics-box .img-comics-content {
@@ -639,6 +639,34 @@ header .header-bottom .nav-menu .search-bar .icon::after {
 #single-comic .details-comic .shop-comic .info-shop {
   width: calc(70% - 30px);
   margin-right: 30px;
+}
+
+#single-comic .details-comic .shop-comic .info-shop h1 {
+  color: #003d75;
+}
+
+#single-comic .details-comic .shop-comic .info-shop .price-check {
+  display: flex;
+  justify-content: space-between;
+  background-color: #55ba5a;
+  color: #fff;
+}
+
+#single-comic .details-comic .shop-comic .info-shop .price-check h4 {
+  margin: 0;
+  padding: 14px 18px;
+}
+
+#single-comic .details-comic .shop-comic .info-shop .price-check .check-comic {
+  display: flex;
+}
+
+#single-comic .details-comic .shop-comic .info-shop .price-check .check-comic h4:first-child {
+  opacity: 72%;
+}
+
+#single-comic .details-comic .shop-comic .info-shop .price-check .check-comic h4:last-child {
+  border-left: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 #single-comic .details-comic .shop-comic .adv {
